--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,6 +10,11 @@
   },
   "dependencies": {
     "@next-auth/mongodb-adapter": "^1.1.3",
+    "@repo/db": "*",
+    "@repo/ui": "*",
+    "@repo/types": "*",
+    "@repo/utils": "*",
+    "@repo/config": "*",
     "bcrypt": "^6.0.0",
     "mongodb": "^5.9.2",
     "next": "15.5.6",
